// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with flex 1`] = `
<ActivityIndicator
  style={
    Array [
      undefined,
      Object {
        "flex": 1,
      },
      null,
    ]
  }
/>
`;

exports[`should match snapshot with no flex 1`] = `
<ActivityIndicator
  style={
    Array [
      undefined,
      null,
      Object {
        "alignSelf": "flex-start",
      },
    ]
  }
/>
`;
